QPID-3648: fix cleanup of remote agent on broker shutdown.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1207877 13f79535-47bb-0310-9956-ffa450edef68